# rolling_hash_file_diff

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  file_diff.cpp  file_diff.hpp  functions.hpp  main.cpp
development_utils/: Dockerfile
file_diff/: CMakeLists.txt  file_diff.cpp  file_diff.hpp
io_helpers/: CMakeLists.txt  io_helpers.cpp  io_helpers.hpp
rolling_hash/: CMakeLists.txt  rolling_hash.cpp  rolling_hash.hpp
tests/: CMakeLists.txt  catch.hpp  catch_main.cpp  similar_file_generator.py  tester_script.py  tests.cpp
tests/test_files/big_files/test1/: file1  file2
tests/test_files/big_files/test10/: file1  file2
tests/test_files/big_files/test100/: file1  file2
tests/test_files/big_files/test11/: file1  file2
tests/test_files/big_files/test12/: file1  file2
tests/test_files/big_files/test13/: file1  file2
tests/test_files/big_files/test14/: file1  file2
tests/test_files/big_files/test15/: file1  file2
tests/test_files/big_files/test16/: file1  file2
tests/test_files/big_files/test17/: file1  file2
tests/test_files/big_files/test18/: file1  file2
tests/test_files/big_files/test19/: file1  file2
tests/test_files/big_files/test2/: file1  file2
tests/test_files/big_files/test20/: file1  file2
tests/test_files/big_files/test21/: file1  file2
tests/test_files/big_files/test22/: file1  file2
tests/test_files/big_files/test23/: file1  file2
tests/test_files/big_files/test24/: file1  file2
tests/test_files/big_files/test25/: file1  file2
tests/test_files/big_files/test26/: file1  file2
tests/test_files/big_files/test27/: file1  file2
tests/test_files/big_files/test28/: file1  file2
tests/test_files/big_files/test29/: file1  file2
tests/test_files/big_files/test3/: file1  file2
tests/test_files/big_files/test30/: file1  file2
tests/test_files/big_files/test31/: file1  file2
tests/test_files/big_files/test32/: file1  file2
tests/test_files/big_files/test33/: file1  file2
tests/test_files/big_files/test34/: file1  file2
tests/test_files/big_files/test35/: file1  file2
tests/test_files/big_files/test36/: file1  file2
tests/test_files/big_files/test37/: file1  file2
tests/test_files/big_files/test38/: file1  file2
tests/test_files/big_files/test39/: file1  file2
tests/test_files/big_files/test4/: file1  file2
tests/test_files/big_files/test40/: file1  file2
tests/test_files/big_files/test41/: file1  file2
tests/test_files/big_files/test42/: file1  file2
(+519 files in other folders)
